style: navigation bar alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ hr {
 }
 
 .container-center {
-    max-width: 600px;
+    max-width: 768px;
     margin: auto;
 }
 
@@ -65,6 +65,12 @@ hr {
 
 /* nav */
 
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .navigation {
     background-color: var(--primary-color);
     color: white;
@@ -75,10 +81,6 @@ hr {
 .navigation .link {
     color: white;
     font-weight: 300;
-}
-
-.navigation .nav-pills {
-    text-align: right;
 }
 
 .navigation .nav-brand {
